finalize the fix for image stretching

--- a/sass/_filleting-services.scss
+++ b/sass/_filleting-services.scss
@@ -81,10 +81,9 @@ html{
                         }
                     }
                     .img-box{
-                        background: blue;
                         border-radius: 5px;
                         img{
-                            max-height: 386.66px;
+                            max-height: 386.66;
                         }
                     }
                 }
