--- a/sass/main.css
+++ b/sass/main.css
@@ -287,11 +287,10 @@ html body #filleting-services .container .img-box img {
     background-clip: border-box;
   }
   html body #filleting-services .container .img-box {
-    background: blue;
     border-radius: 5px;
   }
   html body #filleting-services .container .img-box img {
-    max-height: 386.66px;
+    max-height: 386.66;
   }
 }
 
